package io.github.some_example_name.model;

/**
 * Rappresenta le possibili direzioni di movimento del serpente.
 *
 * Utilizzata per definire la direzione attuale e controllare
 * il movimento all'interno del gioco Snake.
 */
public enum Direction {

    /** Movimento verso l'alto */
    UP,

    /** Movimento verso il basso */
    DOWN,

    /** Movimento verso sinistra */
    LEFT,

    /** Movimento verso destra */
    RIGHT
}
